--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Hernando Silva">
     <meta name="robot" content="index, follow">
+    <meta name="keywords" content="notícia, dinâmico, projeto">
+    <meta name="description" content="Projeto de um site de notícias">
     <title>The Oscar</title>
     <link rel="stylesheet" href="sytle.css">
     <link rel="stylesheet" href="var.css">
